--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ source("https://install-github.me/noamross/redoc")
 
 ## Usage
 
-**redoc** provides an R Markdown [output format] of `docx_reversible()`, built
+**redoc** provides an R Markdown [output format] of `rdocx_reversible()`, built
 on top of `rmarkdown::word_document()`.  You will typically call it via the 
 YAML header in your R Markdown document.  You have the option of highlighting
 the outputs (both chunk and inline) in the Word Document.
@@ -59,7 +59,7 @@ output:
 ---
 ```
 
-Word files that have been created by `docx_reversible()` ("redocs") can be reverted to
+Word files that have been created by `rdocx_reversible()` ("redocs") can be reverted to
 `.Rmd` with `undoc()`, _even after they are edited_.
 
 ```{r undoc}
