--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,5 @@
 ---
-output:
-  github_document:
-    html_preview: FALSE
+output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -46,10 +44,11 @@ source("https://install-github.me/noamross/redoc")
 
 ## Usage
 
-**redoc** provides an R Markdown [output format] of `rdocx_reversible()`, built
-on top of `rmarkdown::word_document()`.  You will typically call it via the 
-YAML header in your R Markdown document.  You have the option of highlighting
-the outputs (both chunk and inline) in the Word Document.
+**redoc** provides an R Markdown [output
+format](https://bookdown.org/yihui/rmarkdown/output-formats.html) of
+`rdocx_reversible()`, built on top of `rmarkdown::word_document()`. You will
+typically call it via the YAML header in your R Markdown document. You have the
+option of highlighting the outputs (both chunk and inline) in the Word Document.
 
 ```yaml
 ---
@@ -76,7 +75,7 @@ code chunks to the document, usually immediately after the previous chunk. If
 chunk outputs are moved, code chunks move with them.  Inline code outputs that
 are deleted are not restored.
 
-Redocs also store the original `.Rmd` used to make thim internally, which can
+Redocs also store the original `.Rmd` used to make them internally, which can
 be extracted and used to diff against the original.
 
 ```{r extact}
