--- a/README.Rmd
+++ b/README.Rmd
@@ -58,6 +58,8 @@ output:
     highlight_outputs: TRUE
 ---
 ```
+[Critic Markup](http://criticmarkup.com/spec.php#thebasicsyntax) edits will be
+converted to Word tracked changes.  There are a few other formatting options available, too.
 
 Word files that have been created by `rdocx_reversible()` ("redocs") can be reverted to
 `.Rmd` with `undoc()`, _even after they are edited_.
@@ -68,12 +70,13 @@ undoc(redoc_example_docx())
 ```
 
 If the Word document has tracked changes, `undoc()` will, by default, convert
-these to [Critic Markup syntax](http://criticmarkup.com/spec.php#thebasicsyntax).
+these to back to Critic Markup syntax.
 
 Undoc'ing a redoc where chunk outputs have been deleted will restore the original
 code chunks to the document, usually immediately after the previous chunk. If
 chunk outputs are moved, code chunks move with them.  Inline code outputs that
-are deleted are not restored.
+are deleted are not restored - it behooves one to only use inline outputs to
+print outputs, rather than change the state for upcoming chunks.
 
 Redocs also store the original `.Rmd` used to make them internally, which can
 be extracted and used to diff against the original.
@@ -89,6 +92,7 @@ Want have feedback or want to contribute? Great! Please take a look at the [cont
 Please note that this project is released with a [Contributor Code of Conduct](https://github.com/noamross/redoc/blob/master/.github/CODE_OF_CONDUCT.md). By participating in this project you agree to abide by its terms.
 
 ```{r cleanup, include = FALSE}
-unlink(c("example.Rmd", "example.docx", "skeleton.Rmd", "skeleton.docx", "skeleton.original.Rmd"))
+unlink(c("example.Rmd", "example.docx", "skeleton.Rmd", "skeleton.docx",
+         "skeleton.original.Rmd", "skeleton.chunks.csv"))
 ```
 
