YAML parser now captures blocks anywhere in doc
Closes #3

--- a/inst/rmarkdown/templates/rdocx_reversible/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rdocx_reversible/skeleton/skeleton.Rmd
@@ -52,6 +52,12 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
+---
+# Additional YAML blocks can be added
+hello: true
+---
+
+
 Track Changes
 --------------
 
