Add related work to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -111,6 +111,14 @@ the RStudio viewer.
 The package also contains a `dedoc` R Markdown template.
 
 
+## Related Work
+
+-  [**officedown**](https://github.com/davidgohel/officedown) produces rich
+   MS Word documents from R Markdown. We hope for more integration between these
+   packages in the future.
+-  [**diffobj**](https://github.com/brodieG/diffobj) visualizes differences
+   between R objects and drives **redoc**'s diff view.
+
 ## Contributing
 
 Want have feedback or want to contribute? Great! Please take a look at the [contributing guidelines](https://github.com/noamross/redoc/blob/master/.github/CONTRIBUTING.md) before filing an issue or pull request. 
