--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ Status](https://travis-ci.org/noamross/redoc.svg?branch=master)](https://travis-
 [![CRAN status](https://www.r-pkg.org/badges/version/redoc){data-external="1"}](https://cran.r-project.org/package=redoc)
 <!-- badges: end -->
 
-**redoc** is a package to enable a two-way R Markdown Microsoft
+**redoc** is a package to enable a two-way R Markdown-Microsoft
 Word workflow.  It generates Word documents that can be de-rendered back into
 R Markdown, retaining edits on the Word document, including tracked changes.
 
