--- a/vignettes/mixed-workflows-with-redoc.Rmd
+++ b/vignettes/mixed-workflows-with-redoc.Rmd
@@ -15,7 +15,7 @@ collapse = TRUE,
 comment = "#>")
 ```
 
-**redoc** is a package to enable a two-way R Markdown Microsoft
+**redoc** is a package to enable a two-way R Markdown-Microsoft
 Word workflow.  It generates Word documents that can be de-rendered back into
 R Markdown, retaining edits on the Word document, including tracked changes.
 
