--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ Status](https://travis-ci.org/noamross/redoc.svg?branch=master)](https://travis-
 Word workflow.  It generates Word documents that can be de-rendered back into
 R Markdown, retaining edits on the Word document, including tracked changes.
 
-**redoc** is not yet stable; it's core engine and API are still subject to
+**redoc** is not yet stable; its core engine and API are still subject to
 change. It's been overhauled a few times already! I welcome your [contributions
 and feedback](https://noamross.github.io/redoc/CONTRIBUTING.html).
 
