--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ options(width = 120)
 # redoc - Reversible Reproducible Documents
 
 <!-- badges: start -->
-[![Support this project on Patreon](https://img.shields.io/badge/patreon-donate-purple.svg){data-external="1"}](https://www.patreon.com/noamross)
+[![Support this project on Patreon](https://img.shields.io/badge/Patreon-donate-purple.svg){data-external="1"}](https://www.patreon.com/noamross)
 [![License: MIT](https://img.shields.io/badge/License-MIT-blue.svg){data-external="1"}](https://opensource.org/licenses/MIT)
 [![Project Status: WIP - Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](http://www.repostatus.org/badges/latest/wip.svg){data-external="1"}](http://www.repostatus.org/#wip)
 [![Build
@@ -131,6 +131,6 @@ Please note that this project is released with a [Contributor Code of Conduct](h
 
 ## Support
 
-You can support me and this project on [my Patreon page](https://www.patreon.com/noamross).  While I some of my open-sourcce work is supported through my day job or volunteering with OSS organizations, **redoc** is a strictly after-hours project for the community, and your support can help me carve out time and pay for some small hardware and software expenses.
+You can support me and this project on [my Patreon page](https://www.patreon.com/noamross).  While I some of my open-source work is supported through my day job or volunteering with OSS organizations, **redoc** is a strictly after-hours project for the community, and your support can help me carve out time and pay for some small hardware and software expenses.
 
 
